Solves the issue of white space pwa in the bottom

--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -1725,6 +1725,12 @@ body.is-loading *:after {
   transition: none !important;
 }
 
+body,
+html {
+  height: 100% !important;
+  overflow: auto !important;
+  max-height: 100% !important;
+}
 /* Type */
 
 body,
